--- a/package.json
+++ b/package.json
@@ -13,18 +13,22 @@
     "@react-native-google-signin/google-signin": "^16.1.1",
     "@react-navigation/native": "^7.1.28",
     "@react-navigation/native-stack": "^7.10.1",
+    "dotenv": "^17.2.3",
     "expo": "~54.0.31",
     "expo-auth-session": "~7.0.10",
+    "expo-checkbox": "~5.0.8",
     "expo-crypto": "~15.0.8",
+    "expo-splash-screen": "~31.0.13",
     "expo-status-bar": "~3.0.9",
     "expo-web-browser": "~15.0.10",
+    "mongodb": "^7.0.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-native": "0.81.5",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
-    "react-native-web": "^0.21.0",
-    "expo-checkbox": "~5.0.8"
+    "react-native-splash-screen": "^3.3.0",
+    "react-native-web": "^0.21.0"
   },
   "private": true
 }
