--- a/app.json
+++ b/app.json
@@ -24,17 +24,6 @@
       "favicon": "./assets/favicon.png"
     },
 
-    "plugins": [
-      "expo-router",
-      [
-        "expo-splash-screen",
-        {
-          "image": "./assets/splash.png",
-          "imageWidth": 200,
-          "resizeMode": "contain",
-          "backgroundColor": "#ffffff"
-        }
-      ]
-    ]
+    "plugins": []
   }
 }
