--- a/app.json
+++ b/app.json
@@ -4,7 +4,7 @@
     "slug": "Libot",
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./assets/logo.png",
+    "icon": "./frontend/assets/logo.png",
     "userInterfaceStyle": "automatic",
     "newArchEnabled": true,
 
@@ -14,14 +14,14 @@
 
     "android": {
       "adaptiveIcon": {
-        "foregroundImage": "./assets/adaptive-icon.png",
+        "foregroundImage": "./frontend/assets/adaptive-icon.png",
         "backgroundColor": "#ffffff"
       },
       "edgeToEdgeEnabled": true
     },
 
     "web": {
-      "favicon": "./assets/favicon.png"
+      "favicon": "./frontend/assets/favicon.png"
     },
 
     "plugins": []
