--- a/package.json
+++ b/package.json
@@ -1,111 +1,50 @@
 {
-  "name": "libotbulacan",
+  "name": "libot",
+  "license": "0BSD",
   "version": "1.0.0",
-  "description": "Libot Bulacan app",
-  "main": "App.js",
+  "main": "expo/AppEntry.js",
+  "scripts": {
+    "start": "expo start",
+    "android": "expo start --android",
+    "ios": "expo start --ios",
+    "web": "expo start --web"
+  },
   "dependencies": {
-    "anymatch": "^3.1.3",
-    "balanced-match": "^1.0.2",
-    "binary-extensions": "^2.3.0",
-    "body-parser": "^2.2.2",
-    "braces": "^3.0.3",
-    "bytes": "^3.1.2",
-    "call-bind-apply-helpers": "^1.0.2",
-    "call-bound": "^1.0.4",
-    "chokidar": "^3.6.0",
-    "concat-map": "^0.0.1",
-    "content-disposition": "^1.0.1",
-    "content-type": "^1.0.5",
-    "cookie": "^0.7.2",
-    "cookie-signature": "^1.2.2",
-    "debug": "^4.4.3",
-    "depd": "^2.0.0",
-    "dunder-proto": "^1.0.1",
-    "ee-first": "^1.1.1",
-    "es-define-property": "^1.0.1",
-    "es-errors": "^1.3.0",
-    "es-object-atoms": "^1.1.1",
-    "escape-html": "^1.0.3",
-    "etag": "^1.8.1",
+    "@react-native-google-signin/google-signin": "^16.1.1",
+    "@react-navigation/bottom-tabs": "^7.10.1",
+    "@react-navigation/drawer": "^7.7.13",
+    "@react-navigation/material-top-tabs": "^7.4.13",
+    "@react-navigation/native": "^7.1.28",
+    "@react-navigation/native-stack": "^7.10.1",
+    "axios": "^1.13.3",
+    "cors": "^2.8.6",
+    "dotenv": "^17.2.3",
+    "expo": "~54.0.31",
+    "expo-auth-session": "~7.0.10",
+    "expo-checkbox": "~5.0.8",
+    "expo-crypto": "~15.0.8",
+    "expo-splash-screen": "~31.0.13",
+    "expo-status-bar": "~3.0.9",
+    "expo-web-browser": "~15.0.10",
     "express": "^5.2.1",
-    "fill-range": "^7.1.1",
-    "forwarded": "^0.2.0",
-    "function-bind": "^1.1.2",
-    "get-intrinsic": "^1.3.0",
-    "get-proto": "^1.0.1",
-    "glob-parent": "^5.1.2",
-    "gopd": "^1.2.0",
-    "has-flag": "^3.0.0",
-    "has-symbols": "^1.1.0",
-    "hasown": "^2.0.2",
-    "http-errors": "^2.0.1",
-    "iconv-lite": "^0.7.2",
-    "ignore-by-default": "^1.0.1",
-    "inherits": "^2.0.4",
-    "ipaddr.js": "^1.9.1",
-    "is-binary-path": "^2.1.0",
-    "is-extglob": "^2.1.1",
-    "is-glob": "^4.0.3",
-    "is-number": "^7.0.0",
-    "is-promise": "^4.0.0",
-    "math-intrinsics": "^1.1.0",
-    "media-typer": "^1.1.0",
-    "merge-descriptors": "^2.0.0",
     "mongodb": "^7.0.0",
     "mongoose": "^9.1.5",
-    "ms": "^2.1.3",
-    "nodemon": "^3.1.11",
-    "normalize-path": "^3.0.0",
-    "object-inspect": "^1.13.4",
-    "once": "^1.4.0",
-    "parseurl": "^1.3.3",
-    "path-to-regexp": "^8.3.0",
-    "picomatch": "^2.3.1",
-    "proxy-addr": "^2.0.7",
-    "pstree.remy": "^1.1.8",
-    "qs": "^6.14.1",
-    "range-parser": "^1.2.1",
-    "raw-body": "^3.0.2",
-    "react-native-dotenv": "^3.4.11",
-    "readdirp": "^3.6.0",
-    "router": "^2.2.0",
-    "safer-buffer": "^2.1.2",
-    "semver": "^7.7.3",
-    "setprototypeof": "^1.2.0",
-    "side-channel": "^1.1.0",
-    "side-channel-list": "^1.0.0",
-    "side-channel-map": "^1.0.1",
-    "side-channel-weakmap": "^1.0.2",
-    "simple-update-notifier": "^2.0.0",
-    "supports-color": "^5.5.0",
-    "to-regex-range": "^5.0.1",
-    "toidentifier": "^1.0.1",
-    "touch": "^3.1.1",
-    "type-is": "^2.0.1",
-    "undefsafe": "^2.0.5",
-    "unpipe": "^1.0.0",
-    "vary": "^1.1.2",
-    "wrappy": "^1.0.2"
+    "react": "19.1.0",
+    "react-dom": "19.1.0",
+    "react-native": "0.81.5",
+    "react-native-gesture-handler": "~2.28.0",
+    "react-native-pager-view": "6.9.1",
+    "react-native-reanimated": "~4.1.1",
+    "react-native-reanimated-carousel": "^4.0.3",
+    "react-native-safe-area-context": "~5.6.0",
+    "react-native-screens": "~4.16.0",
+    "react-native-snap-carousel": "^1.3.1",
+    "react-native-splash-screen": "^3.3.0",
+    "react-native-web": "^0.21.0",
+    "react-native-worklets": "0.5.1"
   },
+  "private": true,
   "devDependencies": {
-    "concurrently": "^9.2.1"
-  },
-  "scripts": {
-    "install-all": "npm install --prefix frontend && npm install --prefix backend",
-    "start-frontend": "npm start --prefix frontend",
-    "start-backend": "npm start --prefix backend",
-    "start-all": "concurrently \"npm run start-backend\" \"npm run start-frontend\""
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/skatzu1/LibotBulacan.git"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "type": "commonjs",
-  "bugs": {
-    "url": "https://github.com/skatzu1/LibotBulacan/issues"
-  },
-  "homepage": "https://github.com/skatzu1/LibotBulacan#readme"
+    "babel-preset-expo": "^54.0.10"
+  }
 }
