--- a/app.json
+++ b/app.json
@@ -1,27 +1,43 @@
 {
   "expo": {
+    "assetBundlePatterns": [
+      "assets/**/*"
+    ],
     "name": "Libot",
-    "slug": "Libot",
+    "slug": "libot",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/logo.png",
     "userInterfaceStyle": "automatic",
     "newArchEnabled": true,
     "ios": {
-      "supportsTablet": true
+      "supportsTablet": true,
+      "infoPlist": {
+        "NSCameraUsageDescription": "Libot uses the camera to show augmented reality tourism content."
+      }
     },
     "android": {
+      "permissions": [
+        "CAMERA"
+      ],
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#ffffff"
       },
-      "edgeToEdgeEnabled": true
+      "edgeToEdgeEnabled": true,
+      "package": "com.skatzu15.libot"
     },
     "web": {
       "favicon": "./assets/favicon.png"
     },
     "plugins": [
-      "expo-font"
-    ]
+      "expo-font",
+      "expo-asset"
+    ],
+    "extra": {
+      "eas": {
+        "projectId": "8f2cc8dd-553e-49c8-a0c4-cfe299f6489f"
+      }
+    }
   }
 }
