--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "@react-navigation/material-top-tabs": "^7.4.13",
     "@react-navigation/native": "^7.1.28",
     "@react-navigation/native-stack": "^7.11.0",
+    "@react-three/drei": "^10.7.7",
+    "@react-three/fiber": "^9.5.0",
+    "@reactvision/react-viro": "^2.50.1",
     "axios": "^1.13.3",
     "expo": "~54.0.0",
     "expo-asset": "~12.0.12",
@@ -18,10 +21,14 @@
     "expo-checkbox": "~5.0.0",
     "expo-constants": "~18.0.0",
     "expo-crypto": "~15.0.0",
+    "expo-dev-client": "^6.0.20",
     "expo-file-system": "~19.0.0",
     "expo-font": "~14.0.0",
+    "expo-gl": "~16.0.10",
     "expo-keep-awake": "~15.0.0",
     "expo-linking": "~8.0.0",
+    "expo-location": "~19.0.8",
+    "expo-router": "^6.0.22",
     "expo-splash-screen": "~0.29.15",
     "expo-status-bar": "~3.0.0",
     "expo-web-browser": "~15.0.0",
@@ -39,7 +46,8 @@
     "react-native-screens": "~4.16.0",
     "react-native-tab-view": "^4.2.2",
     "react-native-web": "~0.21.2",
-    "react-native-webview": "13.15.0"
+    "react-native-webview": "13.15.0",
+    "three": "^0.182.0"
   },
   "scripts": {
     "start": "expo start",
