--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Tourism app for Bulacan",
   "main": "node_modules/expo/AppEntry.js",
   "dependencies": {
-    "@react-native-async-storage/async-storage": "2.2.0",
+    "@react-native-async-storage/async-storage": "^2.2.0",
     "@react-navigation/bottom-tabs": "^7.10.1",
     "@react-navigation/drawer": "^7.7.13",
     "@react-navigation/material-top-tabs": "^7.4.13",
@@ -19,19 +19,21 @@
     "expo-auth-session": "~7.0.0",
     "expo-camera": "~17.0.10",
     "expo-checkbox": "~5.0.0",
-    "expo-constants": "~18.0.0",
+    "expo-constants": "~18.0.13",
     "expo-crypto": "~15.0.0",
     "expo-dev-client": "^6.0.20",
     "expo-file-system": "~19.0.0",
     "expo-font": "~14.0.0",
     "expo-gl": "~16.0.10",
     "expo-keep-awake": "~15.0.0",
-    "expo-linking": "~8.0.0",
+    "expo-linking": "~8.0.11",
     "expo-location": "~19.0.8",
-    "expo-router": "^6.0.22",
+    "expo-router": "~6.0.23",
+    "expo-secure-store": "~15.0.8",
     "expo-splash-screen": "~0.29.15",
-    "expo-status-bar": "~3.0.0",
-    "expo-web-browser": "~15.0.0",
+    "expo-status-bar": "~3.0.9",
+    "expo-system-ui": "~6.0.9",
+    "expo-web-browser": "~15.0.10",
     "express": "^5.2.1",
     "react": "19.1.0",
     "react-dom": "19.1.0",
