--- a/package.json
+++ b/package.json
@@ -4,12 +4,14 @@
   "description": "Tourism app for Bulacan",
   "main": "node_modules/expo/AppEntry.js",
   "dependencies": {
+    "@clerk/clerk-expo": "^2.19.22",
     "@react-native-async-storage/async-storage": "^2.2.0",
+    "@react-native-community/datetimepicker": "^8.4.4",
     "@react-navigation/bottom-tabs": "^7.10.1",
     "@react-navigation/drawer": "^7.7.13",
     "@react-navigation/material-top-tabs": "^7.4.13",
     "@react-navigation/native": "^7.1.28",
-    "@react-navigation/native-stack": "^7.11.0",
+    "@react-navigation/native-stack": "^7.12.0",
     "@react-three/drei": "^10.7.7",
     "@react-three/fiber": "^9.5.0",
     "@reactvision/react-viro": "^2.51.0",
@@ -50,6 +52,9 @@
     "react-native-web": "~0.21.2",
     "react-native-webview": "13.15.0",
     "three": "^0.182.0"
+  },
+  "devDependencies": {
+    "@react-native-community/cli": "latest"
   },
   "scripts": {
     "start": "expo start",
