--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "react-native-drawer-layout": "^4.2.1",
     "react-native-gesture-handler": "~2.28.0",
     "react-native-is-edge-to-edge": "^1.2.1",
+    "react-native-maps": "1.20.1",
     "react-native-pager-view": "6.9.1",
     "react-native-reanimated": "~4.1.0",
     "react-native-reanimated-carousel": "^4.0.3",
