--- a/package.json
+++ b/package.json
@@ -6,12 +6,12 @@
   "dependencies": {
     "@clerk/clerk-expo": "^2.19.22",
     "@react-native-async-storage/async-storage": "^2.2.0",
-    "@react-native-community/datetimepicker": "^8.4.4",
-    "@react-navigation/bottom-tabs": "^7.10.1",
-    "@react-navigation/drawer": "^7.7.13",
+    "@react-native-community/datetimepicker": "8.4.4",
+    "@react-navigation/bottom-tabs": "^7.4.0",
+    "@react-navigation/drawer": "^7.5.0",
     "@react-navigation/material-top-tabs": "^7.4.13",
-    "@react-navigation/native": "^7.1.28",
-    "@react-navigation/native-stack": "^7.12.0",
+    "@react-navigation/native": "^7.1.8",
+    "@react-navigation/native-stack": "^7.3.16",
     "@react-three/drei": "^10.7.7",
     "@react-three/fiber": "^9.5.0",
     "@reactvision/react-viro": "^2.51.0",
@@ -32,7 +32,7 @@
     "expo-location": "~19.0.8",
     "expo-router": "~6.0.23",
     "expo-secure-store": "~15.0.8",
-    "expo-splash-screen": "~0.29.15",
+    "expo-splash-screen": "~31.0.13",
     "expo-status-bar": "~3.0.9",
     "expo-system-ui": "~6.0.9",
     "expo-web-browser": "~15.0.10",
@@ -43,14 +43,17 @@
     "react-native-drawer-layout": "^4.2.1",
     "react-native-gesture-handler": "~2.28.0",
     "react-native-is-edge-to-edge": "^1.2.1",
+    "react-native-maps": "1.20.1",
     "react-native-pager-view": "6.9.1",
-    "react-native-reanimated": "~4.1.0",
+    "react-native-reanimated": "~4.1.1",
     "react-native-reanimated-carousel": "^4.0.3",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
+    "react-native-svg": "13.9.0",
     "react-native-tab-view": "^4.2.2",
     "react-native-web": "~0.21.2",
     "react-native-webview": "13.15.0",
+    "react-native-worklets": "^0.7.2",
     "three": "^0.182.0"
   },
   "devDependencies": {
