--- a/app.json
+++ b/app.json
@@ -47,7 +47,7 @@
       ],
       "expo-secure-store",
       "expo-web-browser",
-      "@react-native-community/datetimepicker"
+      "@react-native-community/datetimepicker",
       [
         "expo-location",
         {
