--- a/package.json
+++ b/package.json
@@ -12,8 +12,6 @@
     "@react-navigation/material-top-tabs": "^7.4.13",
     "@react-navigation/native": "^7.1.8",
     "@react-navigation/native-stack": "^7.3.16",
-    "@react-three/drei": "^10.7.7",
-    "@react-three/fiber": "^9.5.0",
     "@reactvision/react-viro": "^2.51.0",
     "axios": "^1.13.3",
     "expo": "~54.0.0",
@@ -49,12 +47,11 @@
     "react-native-reanimated-carousel": "^4.0.3",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
-    "react-native-svg": "13.9.0",
+    "react-native-svg": "^15.15.3",
     "react-native-tab-view": "^4.2.2",
     "react-native-web": "~0.21.2",
     "react-native-webview": "13.15.0",
-    "react-native-worklets": "^0.7.2",
-    "three": "^0.182.0"
+    "react-native-worklets": "^0.7.2"
   },
   "devDependencies": {
     "@react-native-community/cli": "latest"
