--- a/package.json
+++ b/package.json
@@ -22,9 +22,11 @@
     "expo-constants": "~18.0.13",
     "expo-crypto": "~15.0.0",
     "expo-dev-client": "^6.0.20",
-    "expo-file-system": "~19.0.0",
+    "expo-file-system": "~19.0.21",
     "expo-font": "~14.0.0",
     "expo-gl": "~16.0.10",
+    "expo-image-manipulator": "~14.0.8",
+    "expo-image-picker": "~17.0.10",
     "expo-keep-awake": "~15.0.0",
     "expo-linking": "~8.0.11",
     "expo-location": "~19.0.8",
@@ -39,6 +41,7 @@
     "react-dom": "19.1.0",
     "react-native": "0.81.5",
     "react-native-drawer-layout": "^4.2.1",
+    "react-native-fast-tflite": "^2.0.0",
     "react-native-gesture-handler": "~2.28.0",
     "react-native-is-edge-to-edge": "^1.2.1",
     "react-native-maps": "1.20.1",
@@ -49,9 +52,12 @@
     "react-native-screens": "~4.16.0",
     "react-native-svg": "^15.15.3",
     "react-native-tab-view": "^4.2.2",
+    "react-native-vision-camera": "^4.7.3",
     "react-native-web": "~0.21.2",
     "react-native-webview": "13.15.0",
-    "react-native-worklets": "^0.7.2"
+    "react-native-worklets": "^0.7.2",
+    "react-native-worklets-core": "^1.6.3",
+    "vision-camera-resize-plugin": "^3.2.0"
   },
   "devDependencies": {
     "@react-native-community/cli": "latest"
