--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@react-navigation/native": "^7.1.8",
     "@react-navigation/native-stack": "^7.3.16",
     "@reactvision/react-viro": "^2.51.0",
+    "@tensorflow/tfjs": "^4.22.0",
+    "@tensorflow/tfjs-react-native": "^1.0.0",
     "axios": "^1.13.3",
     "expo": "~54.0.0",
     "expo-asset": "~12.0.12",
@@ -42,6 +44,7 @@
     "react-native": "0.81.5",
     "react-native-drawer-layout": "^4.2.1",
     "react-native-fast-tflite": "^2.0.0",
+    "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "~2.28.0",
     "react-native-is-edge-to-edge": "^1.2.1",
     "react-native-maps": "1.20.1",
